--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,9 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://muxinc.jfrog.io/artifactory/default-maven-release-local"
+        }
     }
 
     dependencies {
@@ -17,6 +20,9 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://muxinc.jfrog.io/artifactory/default-maven-release-local"
+        }
     }
 }
 
@@ -53,10 +59,12 @@ android {
         implementation "com.google.android.exoplayer:exoplayer-hls:${exoplayer_version}"
         implementation "com.google.android.exoplayer:exoplayer-dash:${exoplayer_version}"
         implementation "com.google.android.exoplayer:exoplayer-smoothstreaming:${exoplayer_version}"
+        implementation 'com.mux.stats.sdk.muxstats:MuxExoPlayer_r2_18_1:3.5.2'
         testImplementation 'junit:junit:4.13.2'
         testImplementation 'androidx.test:core:1.3.0'
         testImplementation 'org.mockito:mockito-inline:5.0.0'
         testImplementation 'org.robolectric:robolectric:4.10.3'
+        
     }
 
     testOptions {
