--- a/android/build.gradle
+++ b/android/build.gradle
@@ -59,7 +59,7 @@ android {
         implementation "com.google.android.exoplayer:exoplayer-hls:${exoplayer_version}"
         implementation "com.google.android.exoplayer:exoplayer-dash:${exoplayer_version}"
         implementation "com.google.android.exoplayer:exoplayer-smoothstreaming:${exoplayer_version}"
-        implementation 'com.mux.stats.sdk.muxstats:MuxExoPlayer_r2_18_1:3.5.2'
+        api 'com.mux.stats.sdk.muxstats:MuxExoPlayer_r2_18_1:3.5.2'
         testImplementation 'junit:junit:4.13.2'
         testImplementation 'androidx.test:core:1.3.0'
         testImplementation 'org.mockito:mockito-inline:5.0.0'
