--- a/android/build.gradle
+++ b/android/build.gradle
@@ -63,7 +63,7 @@ android {
         testImplementation 'androidx.test:core:1.3.0'
         testImplementation 'org.mockito:mockito-inline:5.0.0'
         testImplementation 'org.robolectric:robolectric:4.10.3'
-        api 'com.mux.stats.sdk.muxstats:MuxExoPlayer_r2_18_1:3.5.2'
+        implementation 'com.mux.stats.sdk.muxstats:MuxExoPlayer_2_18_7:3.4.7'
 
         
     }
