--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,7 +54,7 @@ android {
     }
 
     dependencies {
-        def exoplayer_version = "2.18.7"
+        def exoplayer_version = "2.18.1"
         implementation "com.google.android.exoplayer:exoplayer-core:${exoplayer_version}"
         implementation "com.google.android.exoplayer:exoplayer-hls:${exoplayer_version}"
         implementation "com.google.android.exoplayer:exoplayer-dash:${exoplayer_version}"
@@ -63,8 +63,7 @@ android {
         testImplementation 'androidx.test:core:1.3.0'
         testImplementation 'org.mockito:mockito-inline:5.0.0'
         testImplementation 'org.robolectric:robolectric:4.10.3'
-        implementation 'com.mux.stats.sdk.muxstats:MuxExoPlayer_2_18_7:3.4.7'
-
+        api 'com.mux.stats.sdk.muxstats:MuxExoPlayer_r2_18_1:3.4.1'
         
     }
 
